# instiGPT

./: .gitignore  Makefile  README.md  USER_GUIDE.md  clean_db.py  colab_scraper.ipynb  crawl4ai_css_poc.py  crawl4ai_full.py  crawl4ai_poc.py  debug_db.py  debug_profile.py  google_scholar_scraper.ipynb  inspect_html.py  insti.db  models.py  page.html  profile.html  prompts.py  pyproject.toml  requirements.txt  test_fallback.py  universal_faculty_crawler.py  universal_faculty_data.json  universal_faculty_data_washu.json  university_crawler_legacy.py  washu_faculty.json
Faculty_link+Segmentation(code + Output)/Final faculty link code and output/: facultylinkwithduckduckgo.py
archives/data/: google_scholar_scraper.ipynb
insti_scraper/: README.md  __init__.py  __main__.py  batch.py  config.py  crawler.py  database.py  discovery.py  duckduckgo_discovery.py  enrichment.py  extractors.py  main.py  models.py  page_classifier.py  strategies.py
insti_scraper/analyzers/: __init__.py  vision_analyzer.py
insti_scraper/config/: __init__.py  profile_loader.py  profile_updater.py  university_profiles.yaml
insti_scraper/core/: __init__.py  auto_config.py  config.py  cost_tracker.py  logger.py  models.py  prompts.py  rate_limiter.py  (+4 more)
output_data/: professors.csv
scraper_app/: __init__.py  browser.py  config.py  main.py  manager.py  state.py  universal_crawler.py  utils.py
scripts/: debug_db.py  verify_scholar_scraper.py
tests/: conftest.py  run_mit_test.py  test_detail_extraction.py  test_discovery.py  test_extractors.py  test_fallback.py  test_integration.py
(+28 files in other folders)
